--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,5 +34,8 @@
        ga('send', 'pageview');
      </script>
     {% endif %}
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5546032821133856"
+     crossorigin="anonymous"></script>
   </body>
 </html>
